# gce_test

./: setup_git_env.sh
export_project/: client_secrets.json  helloworld.py
local_tools/: firewall.sh
remote_tools/: setup_git_env.sh
scala_cdc_mr/: scala_mapreduce.scala
src/cc/: README_dcmtk.txt
src/cc/gs_demo_cpp/: stream_input.sh
src/cc/libs/: CMakeLists.txt
src/cc/protobuf_demo/: CMakeLists.txt  compile_proto.sh
src/cc/test_projects/: CMakeLists.txt  README.txt
src/cc/test_projects/gflags_demo/: CMakeLists.txt
src/cc/test_projects/gs_demo_cpp/: stream_output.sh
src/cc/test_projects/protobuf_demo/: CMakeLists.txt  main.cc
src/hadoop2/: README.txt
src/hadoop2/java/wordcount/: README.txt  WordCount.java  build.sh  exec_hadoop.sh
src/hadoop2/java/wordcount_xml/: WordCount.java  build.sh  deploy.sh  exec_hadoop.sh  simple.xml
src/hadoop2/java/xmlparser/: MyParserMapper.java  ParserDriver.java  XmlInputFormat.java  build.sh  exec_hadoop.sh
src/hadoop2/java/xmlparser2/: .gitignore  XmlDriver.java  build.sh  exec_hadoop.sh  exec_hadoop_local.sh
src/hadoop2/java/xmlparser2/output/: .part-r-00000.crc  part-r-00000
src/hadoop2/java/xmlparser2/output2/: .part-r-00000.crc  part-r-00000
src/misc/export_project/: export_table.py
src/spark/cdc_mr/: build.sbt  scala_mapreduce.scala
src/spark/xml_parser/: xml_parse.scala
src_cc/: CMakeLists.txt
src_cc/gflags_demo/: CMakeLists.txt  main.cc
src_cc/gs_demo_cpp/: a.out  main.cc  test.txt
